# world-radio

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/net/vchub/r4dio/: Artwork.kt  Catalog.kt  FavStore.kt  MainActivity.kt  MirrorClient.kt  NowPlayingScreen.kt  PlaybackService.kt  PortraitCaptureActivity.kt  RadioWidgetProvider.kt  Station.kt  SyncActivity.kt  SyncClient.kt
android/app/src/main/res/drawable/: btn_close.xml  btn_danger.xml  btn_filled.xml  btn_ghost.xml  btn_outline.xml  card_qr_light.xml  field_key.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_pause.xml  ic_play.xml  ic_scope_all.xml  ic_scope_favs.xml  ic_shuffle.xml  ic_star.xml  ic_star_outline.xml  ic_stat_r4dio.xml  ic_sync.xml  pill_synced.xml  widget_bg.xml
android/app/src/main/res/layout/: activity_sync.xml  widget_radio.xml
android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml
android/app/src/main/res/xml/: widget_radio_info.xml
android/app/src/test/kotlin/net/vchub/r4dio/: FavStoreLogicTest.kt  FavStoreSyncLogicTest.kt  MirrorClientTest.kt  ShuffleTest.kt  (+1 more)
crates/radio-audio/: Cargo.toml
crates/radio-audio/src/: engine.rs  lib.rs  output.rs  ring.rs  slot.rs
crates/radio-core/: Cargo.toml  build.rs
crates/radio-core/src/: lib.rs  mirror.rs  paths.rs  single_instance.rs  update.rs
crates/radio-core/src/audio/: command.rs  crossfade.rs  gain.rs  icy.rs  mod.rs  resample.rs  retry.rs
crates/radio-core/src/catalog/: api.rs  cache.rs  catalog.rs  facets.rs  favorites.rs  filter.rs  health.rs  mod.rs  station.rs
crates/radio-core/src/sync/: client.rs  key.rs  mod.rs
crates/radio-mini/: Cargo.toml  tauri.conf.json
crates/radio-mini/src/: app.rs  backend.rs  catalog_src.rs  commands.rs  main.rs  state.rs  theme.rs  tray.rs
crates/radio-mini/ui/: index.html
crates/radio-tui/: Cargo.toml
crates/radio-tui/src/: main.rs  sync_cmd.rs
crates/radio-tui/src/audio/: mod.rs  output.rs  slot.rs  stream.rs
crates/radio-tui/src/tui/: config.rs  keybind.rs  keymap.rs  logger.rs  message.rs  mod.rs  model.rs  spectrum.rs  theme.rs  update.rs  worker.rs
crates/radio-tui/src/tui/view/: header.rs  hint.rs  mod.rs  overlay_help.rs  overlay_keybind.rs  overlay_settings.rs  overlay_sync.rs  sidebar.rs  spectrum_render.rs  station_list.rs
docs/design/: README.md  tui-engineer-reference-v6.html  world-radio-mini-brief-onepager.md  world-radio-mini-design-brief.md
docs/design/android-assets/: README.md  handoff.html
docs/design/logo/: index.html  r4dio-logo-app.jsx
docs/design/mini/: android.jsx  canvas-app.jsx  icons.jsx  index.html  mini-window.jsx  platforms.jsx  themes.js
docs/superpowers/plans/: 2026-06-20-world-radio-mini-desktop.md  2026-06-26-mini-popup-redesign.md  2026-06-26-mini-tray-popover.md  2026-06-27-mini-tauri-popover.md  2026-06-29-android-radio-flutter-mvp.md  2026-06-29-android-radio-kotlin-mvp.md  2026-07-17-sync-replace-semantics.md  2026-07-17-tui-filter-performance.md  2026-07-18-android-next-track-shuffle.md  2026-07-19-android-widget-buttons-fix.md  2026-07-20-android-shuffle-cold-start.md  2026-07-20-android-widget-keep-controller-until-playback.md  2026-07-21-tui-startup-filter-preserved.md  2026-07-22-tui-popular-seed-on-empty-filter.md
docs/superpowers/specs/: 2026-06-20-world-radio-mini-desktop-design.md  2026-06-26-mini-popup-redesign-design.md  2026-06-27-mini-tauri-popover-design.md  2026-06-29-android-radio-mvp-design.md  2026-07-17-sync-replace-semantics-design.md  2026-07-17-tui-filter-performance-design.md  2026-07-18-android-next-track-shuffle-design.md  2026-07-19-android-widget-buttons-fix-design.md  2026-07-20-android-shuffle-cold-start-design.md  2026-07-20-android-widget-keep-controller-until-playback-design.md  2026-07-21-tui-startup-filter-preserved-design.md  2026-07-22-tui-popular-seed-on-empty-filter-design.md
scripts/: bump-version.sh  bump-version.test.sh
