[package]
name = "radio-core"
version = "1.4.5"
edition = "2021"
license = "MIT"
description = "Portable core for World Radio: catalog, cache and pure audio logic."
repository = "https://github.com/Chubik/world-radio"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
