[package]
name = "radio-tui"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "World Radio: a terminal radio player for 30,000+ stations."
repository = "https://github.com/Chubik/world-radio"

[[bin]]
name = "world-radio"
path = "src/main.rs"

[dependencies]
radio-core = { path = "../radio-core" }
radio-audio = { path = "../radio-audio" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ratatui = "0.30"
crossterm = "0.29"
rustfft = "6.4"
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastrand = "2"

[dev-dependencies]
mockito = "1"
tempfile = "3"
